--- a/study.html
+++ b/study.html
@@ -71,11 +71,11 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术</a></li>
+					<li><a href="study.html">学术项目</a></li>
 					<li><a href="data.html">数据项目</a></li>
 					<li><a href="up.html">UP主</a></li>
 					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他创意</a></li>
+					<li><a href="other.html">其他</a></li>
 					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
@@ -88,7 +88,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新 Academic research and innovation</h2>
 				<div class="row row-bottom-padded-md">
 
 
@@ -123,7 +123,7 @@
 							<a href="#" class="blog-img"><img src="images/capacitance.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">面向运动捕捉的互电容刺绣交互界面研究</a></h3>
-								<span><small>织物交互界面 </small> / <small> 单片机 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<span><small>织物交互界面 </small> / <small> Cypress </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
 								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster<a>
@@ -157,18 +157,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/pacific.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">情感可视化：Smile or Scowl? Looking at Infographic Design Through the Affective Lens</a></h3>
-								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>什么因素触发了信息图表中的情感反应？参与数据分析，负责网页前后端设计与开发，网页交互式呈现设计因素与设计案例，加入了图片瀑布流、主题色更换等功能。</p>
-								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="doc/smell.pdf" target="_blank">PDF<a>
-							</div>
-						</div>
-					</div>
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -205,17 +194,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/digitalsmell.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">数字嗅觉应用：创意集群</a></h3>
-								<span><small>媒体传达课 </small> / <small> ideas </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>[家乡的味道][调香盒][香水生成器][气味喇叭][嗅觉剥离][气味书]...一切有关数字嗅觉的创意</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-							</div>
-						</div>
-					</div>
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -239,8 +218,6 @@
 									Your browser does not support the video tag.
 								</video>
 							</a>
-
-
 							<div class="desc">
 								<h3><a href="#">无法挽回的呼吸-为死亡而设计</a></h3>
 								<span><small>媒体传达课 </small> / <small> 概念交互 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
@@ -292,11 +269,11 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/panogo.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">PanoGo：基于室内全景导航的商场服务系统</a></h3>
 								<span><small>创新创业项目 </small> / <small> 创业/APP </small> / <small> <i class="icon-comment"></i> 2017-2018</small></span>
-								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<p>项目旨在通过全景技术构建虚拟商城，打通线上与线下一体化购物，能够足不出户逛商城、到了商城有导航。项目在第三届互联网+大赛中获省铜奖、校优秀科研项目、全国创新创业年会最佳创意项目，取得软件著作权、论文各一份。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -334,9 +311,8 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">更多待补充..</a></h3>
-								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
-								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<h3><a href="#">更多待书写..</a></h3>
+								<span><small>Any </small> / <small> Creative </small> / <small> <i class="icon-comment"></i> 201X</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
