--- a/data.html
+++ b/data.html
@@ -71,11 +71,11 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术</a></li>
+					<li><a href="study.html">学术项目</a></li>
 					<li><a href="data.html">数据项目</a></li>
 					<li><a href="up.html">UP主</a></li>
 					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他创意</a></li>
+					<li><a href="other.html">其他</a></li>
 					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
@@ -89,7 +89,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">数据分析与可视化</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">数据分析与可视化 Data analysis and visualization</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -106,42 +106,121 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">Calliope：数据动画创作平台</a></h3>
+								<span><small>工具开发 </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 2019-2020</small></span>
+								<p>Calliope将丰富的图表动画与基础的图文编辑功能相结合，制作优秀的数据视频。我负责构建画布操作、资源管理、音乐、文件管理系统，包含文本、图形生成、拖拽、旋转、颜色管理、风格设置等重要功能开发和界面设计</p>
+								<a href="https://datavideo.idvxlab.com/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://datavideo.idvxlab.com/" target="_blank">链接</a>
+
 							</div>
 						</div>
 					</div>
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/pacific.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">情感可视化：Smile or Scowl? Looking at Infographic Design Through the Affective Lens</a></h3>
+								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>什么因素触发了信息图表中的情感反应？参与数据分析，负责网页前后端设计与开发，网页交互式呈现设计因素与设计案例，加入了图片瀑布流、主题色更换等功能。</p>
+								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="doc/smell.pdf" target="_blank">PDF</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/smartvis.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3><a href="#">SmartVis：线上智能数据可视化平台</a></h3>
+								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<p>参与线上智能数据可视化平台开发，负责Barchart、Linechart可视化组件的开发</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">Z世代三坑服饰行业数据研究</a></h3>
+								<span><small>数据研究报告 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="doc/smell.pdf" target="_blank">视频</a>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/zhinanai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">社交网络中的“直男癌”</a></h3>
+								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>为了搞清楚网络上频繁出现的“直男癌”到底是什么，从七个社交平台暴力爬取了有关“直男癌”逾300万字的文本数据，负责策划选题、数据爬取、文本分析、视觉、撰文，阅读量30W+</p>
+								<a href="https://zhuanlan.zhihu.com/p/28923834" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">知乎</a>
+								<a href="https://www.163.com/data/article/CT43NV6M000181IU.html" target="_blank">网易数读</a>
+								<a href="https://zhuanlan.zhihu.com/p/29359517" target="_blank">采访</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">00后相亲交友观全面观察</a></h3>
+								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>从三大00后贴吧爬取了近期的2.3万个帖子，经过数据清洗得到了22696个“相亲帖”，进行多维度分析，观察00后的相亲交友观。负责了策划选题、数据爬取、文本分析、视觉、撰文</p>
+								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" target="_blank">网易数读</a>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">小时候的梦想</a></h3>
+								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>提取微博近1.2万条有关梦想的关键词，整理出了一份“梦想职业”榜，这份榜单掀起了80后、90后的集体回忆杀。负责策划选题、数据爬取、文本分析、视觉、撰文，轻量取巧的选题取得了较高的讨论热度</p>
+								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" target="_blank">网易数读</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">校服</a></h3>
+								<span><small>数据新闻 </small> / <small> 图像分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>为了搞清楚网络上频繁出现的“直男癌”到底是什么，从七个社交平台暴力爬取了有关“直男癌”逾300万字的文本数据，负责策划选题、数据爬取、文本分析、视觉、撰文，阅读量30W+</p>
+								<a href="https://zhuanlan.zhihu.com/p/28923834" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">链接1</a>
+								<a href="https://www.163.com/data/article/CT43NV6M000181IU.html" target="_blank">链接2</a>
+							</div>
+						</div>
+					</div>
+
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/dizhen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">四川地震时序图</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -151,10 +230,11 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3><a href="#">恐怖主义3.0</a></h3>
+								<span><small>信息图 </small> / <small> AI/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="detail/kongbu-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="detail/kongbu-detail.jpg" target="_blank">Infographic</a>
 							</div>
 						</div>
 					</div>
