--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术</a></li>
+					<li><a href="study.html">学术项目</a></li>
 					<li><a href="data.html">数据项目</a></li>
 					<li><a href="up.html">UP主</a></li>
 					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他创意</a></li>
+					<li><a href="other.html">其他</a></li>
 					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
@@ -116,7 +116,7 @@
 
 
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">创意集</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">创意集群</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
