--- a/up.html
+++ b/up.html
@@ -71,11 +71,11 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术</a></li>
+					<li><a href="study.html">学术项目</a></li>
 					<li><a href="data.html">数据项目</a></li>
 					<li><a href="up.html">UP主</a></li>
 					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他创意</a></li>
+					<li><a href="other.html">其他</a></li>
 					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
