--- a/data.html
+++ b/data.html
@@ -107,7 +107,7 @@
 							<a href="#" class="blog-img"><img src="images/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">Calliope：数据动画创作平台</a></h3>
-								<span><small>工具开发 </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 2019-2020</small></span>
+								<span><small>工具开发 </small> / <small> Web/VS/Git </small> / <small> <i class="icon-comment"></i> 2019-2020</small></span>
 								<p>Calliope将丰富的图表动画与基础的图文编辑功能相结合，制作优秀的数据视频。我负责构建画布操作、资源管理、音乐、文件管理系统，包含文本、图形生成、拖拽、旋转、颜色管理、风格设置等重要功能开发和界面设计</p>
 								<a href="https://datavideo.idvxlab.com/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://datavideo.idvxlab.com/" target="_blank">链接</a>
@@ -132,10 +132,24 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">莆田医网-PacificVis2020入围作品</a></h3>
+								<span><small>数据可视化 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>搜集公司历史信息，使用桑基图大致勾勒出莆田医院的运营肖像。负责桑基图视觉设计开发，以浮游点表达莆田系医院的数量，流动代表医院的生命历程，通过滑动交互、悬浮、拖拽等操作呈现不同结果</p>
+								<a href="https://olivialan.github.io/putian_2/index.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://olivialan.github.io/putian_2/index.html" target="_blank">链接</a>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/smartvis.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">SmartVis：线上智能数据可视化平台</a></h3>
-								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<span><small>可视化开发 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
 								<p>参与线上智能数据可视化平台开发，负责Barchart、Linechart可视化组件的开发</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 
@@ -153,6 +167,20 @@
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="doc/smell.pdf" target="_blank">视频</a>
 
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/zhinanai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">全球犯罪热点可视化交互网站</a></h3>
+								<span><small>毕设 </small> / <small> WebGis/D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<p>基于开源的全球犯罪数据，运用多视图的地理信息数据可视化技术，包括Openlayer、leaflet以及D3、echarts、highcharts库，呈现可交互的犯罪时序热点分析结果，以此为主题撰写了毕设论文。</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="#" target="_blank">待上传网页</a>
 							</div>
 						</div>
 					</div>
@@ -214,18 +242,17 @@
 					</div>
 
 
-
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/dizhen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">四川地震时序图</a></h3>
 								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -238,6 +265,172 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/tingshui.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">武汉大学停水报告</a></h3>
+								<span><small>信息图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/kongqi.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">空气质量监测变化图</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/water.png" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">Who Has Polluted Our Watr？</a></h3>
+								<span><small>可视化 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/water2.png" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">Who Has Polluted Our Watr？</a></h3>
+								<span><small>可视化 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/tingche1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">停车配建分析</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/tingche2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">停车配建分析</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/jiaotong.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">交通大数据可视化</a></h3>
+								<span><small>可视化 </small> / <small> Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/chenshi.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">2010年全国城市建设信息图</a></h3>
+								<span><small>信息图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/wumai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">雾霾数据实时监测可视化</a></h3>
+								<span><small>可视化 </small> / <small> Python</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/yuyue.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">武汉大学图书馆预约机制调查报告</a></h3>
+								<span><small>信息图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/banji.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">班级印象信息图</a></h3>
+								<span><small>信息图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/renkou.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">中国人口密度图</a></h3>
+								<span><small>地图 </small> / <small> Arcgis</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/renkou2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">亚洲地区人口分级图</a></h3>
+								<span><small>地图 </small> / <small> Arcgis</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/dubolin.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">都柏林小学选址分析</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2016</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/dubolin2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">都柏林小学选址分析</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2016</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
