--- a/data.html
+++ b/data.html
@@ -136,7 +136,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/putian.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/putian.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">莆田医网-PacificVis2020入围作品</a></h3>
 								<span><small>数据可视化 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
