--- a/data.html
+++ b/data.html
@@ -94,13 +94,15 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/jk.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Z世代三坑服饰行业数据研究</a></h3>
+								<h3><a href="#">Z世代三坑服饰趣味数据研究</a></h3>
 								<span><small>数据研究报告 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="doc/smell.pdf" target="_blank">视频</a>
+								<a href="https://www.bilibili.com/video/BV1vh41117Dc?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">Lolita</a>
+								<a href="https://www.bilibili.com/video/BV1bp4y1a7KT?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">汉服</a>
+								<a href="https://www.bilibili.com/video/BV12T4y1L7UD?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">JK制服</a>
 
 							</div>
 						</div>
