--- a/other.html
+++ b/other.html
@@ -41,7 +41,6 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -53,7 +52,6 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -88,16 +86,18 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘/游戏/</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘/游戏</h2>
 				<div class="row row-bottom-padded-md">
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">格纹宝：全自动格纹生成机</a></h3>
+								<span><small>工具 </small> / <small> Web </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>格纹宝，JK格裙、格纹爱好者的天堂！</p>
+								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">点击使用 <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
@@ -157,17 +157,64 @@
 							</div>
 						</div>
 					</div>
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao1.jpg" class="img-responsive" ></a>
+							<a href="#" class="blog-img"><img src="images/haibao1.jpg" class="img-responsive"></a>
 							<div class="desc">
 								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-
 							</div>
 						</div>
 					</div>
-
-
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao2.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao3.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao4.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao5.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao6.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/haibao7.jpg" class="img-responsive"></a>
+							<div class="desc">
+								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
 
 
 
