--- a/study.html
+++ b/study.html
@@ -126,7 +126,7 @@
 								<span><small>织物交互界面 </small> / <small> Cypress </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
 								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster<a>
+								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster</a>
 							</div>
 						</div>
 					</div>
@@ -167,7 +167,7 @@
 								<span><small>课程论文 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>综述了目前国内对数字嗅觉的研究概况，从理论研究、技术手段、行业应用、商业产品等角度进行调研和分析。</p>
 								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="doc/smell.pdf" target="_blank">PDF<a>
+								<a href="doc/smell.pdf" target="_blank">PDF</a>
 							</div>
 						</div>
 					</div>
@@ -287,7 +287,7 @@
 								<span><small>Paper </small> / <small> 室内导航 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>提出一种标准程序，用于生成室内全景建模中全景站点的具体位置和总数，建立全景场地与其目标之间的功能关系，将关系应用于全景站点网络使用距离清晰度函数（FC和Fe）表示全景图和目标距离或障碍物距离之间的数学关系</p>
 								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" target="_blank">链接<a>
+								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" target="_blank">链接</a>
 							</div>
 						</div>
 					</div>
@@ -301,7 +301,7 @@
 								<span><small>Paper </small> / <small> CNN/Matlab </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>提出一种基于卷积神经网络（CNN）的高分辨率农业遥感影像分类方法，通过在MATLAB深度学习工具箱下的CNN上进行训练和测试，经过训练中调整参数的逐步优化，作物分类最终得到了99.66%的正确率。</p>
 								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" target="_blank">链接<a>
+								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" target="_blank">链接</a>
 							</div>
 						</div>
 					</div>
