--- a/up.html
+++ b/up.html
@@ -91,37 +91,117 @@
 				<div class="fh5co-narrow-content">
 					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者</h2>
 
+					<section id="home" class="parallax-section">
+						<div class="overlay"></div>
+						<div class="container">
+							<div class="row">
+
+								<div class="col-md-8 col-sm-12">
+									<div class="home-text">
+										<h1>Your Website has a video background!</h1>
+										<p>Feel free to download and use HTML templates from Tooplate</p>
+										<ul class="section-btn">
+											<a href="#about" class="smoothScroll"><span data-hover="Discover More">Discover More</span></a>
+										</ul>
+									</div>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- Video -->
+						<video controls autoplay loop muted>
+							<source src="videos/video.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
+					</section>
+
+
+
 					<div class="row">
 						<div class="col-md-4">
 							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="fh5co-icon">
-									<i class="icon-globe"></i>
+									<img src="icon/bilibili.jpg" class="img-responsive">
 								</div>
 								<div class="fh5co-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="https://space.bilibili.com/421178217">Bilibili</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="fh5co-icon">
+									<img src="icon/zhihu.jpg" class="img-responsive">
+								</div>
+								<div class="fh5co-text">
+									<p><a href="#">知乎</p>
+								</div>
+							</div>
+						</div>
+
+
+
+						<div class="row">
+							<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+								<div class="slider-text-inner">
+									<h2>将业余的爱好与创意付诸实践，独自创建并运营我的视频频道</h2>
+									<h2>全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
+									<h2>在2年左右的时间内，完成了92个视频项目的选题策划、脚本撰写、材料购置、手工实践、摄影拍摄、后期剪辑，以及超过300条的视频创意清单</h2>
+									<h2>拥有超过20项的商业合作策划案例，其中包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h2>
+									<h2>我的主要运营平台在Bilibili和知乎，但你也可以在以下平台观看：</h2>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="fh5co-icon">
+									<img src="icon/weibo.jpg" class="img-responsive">
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="fh5co-icon">
-									<i class="icon-map"></i>
-								</div>
-								<div class="fh5co-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<img src="icon/douyin.jpg" class="img-responsive">
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="fh5co-icon">
-									<i class="icon-phone"></i>
-								</div>
-								<div class="fh5co-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<img src="icon/douyu.jpg" class="img-responsive">
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="fh5co-icon">
+									<img src="icon/banciyuan.jpg" class="img-responsive">
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="fh5co-icon">
+									<img src="icon/xigua.jpg" class="img-responsive">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="fh5co-icon">
+									<img src="icon/youtube.jpg" class="img-responsive">
+								</div>
+							</div>
+						</div>
+
+
+
+
 					</div>
 				</div>
 			</div>
