--- a/data.html
+++ b/data.html
@@ -98,7 +98,7 @@
 							<div class="desc">
 								<h3><a href="#">Z世代三坑服饰趣味数据研究</a></h3>
 								<span><small>数据研究报告 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<p>一系列关于年轻爱好群体“三坑服饰”时尚数据的趣味视频。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://www.bilibili.com/video/BV1vh41117Dc?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">Lolita</a>
 								<a href="https://www.bilibili.com/video/BV1bp4y1a7KT?spm_id_from=333.999.0.0&vd_source=c654b79d11008711b7456151b460cf21" target="_blank">汉服</a>
@@ -221,7 +221,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+					<!--<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
@@ -232,7 +232,7 @@
 								<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">链接1</a>
 							</div>
 						</div>
-					</div>
+					</div>-->
 
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
@@ -429,9 +429,8 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">更多待书写...</a></h3>
+								<span><small>More</small> / <small> Data </small> / <small> <i class="icon-comment"></i> 202X</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
