--- a/other.html
+++ b/other.html
@@ -91,7 +91,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/gewen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">格纹宝：全自动格纹生成机</a></h3>
 								<span><small>工具 </small> / <small> Web </small> / <small> <i class="icon-comment"></i> 2020</small></span>
