--- a/up.html
+++ b/up.html
@@ -111,7 +111,7 @@
 
 						<!-- Video -->
 						<video controls autoplay loop muted>
-							<source src="videos/video.mp4" type="video/mp4">
+							<source src="videos/blankme.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 					</section>
