--- a/up.html
+++ b/up.html
@@ -112,7 +112,6 @@
 						<!-- Video -->
 						<video controls autoplay loop muted>
 							<source src="videos/blankme.mp4" type="video/mp4">
-							Your browser does not support the video tag.
 						</video>
 					</section>
 
@@ -136,7 +135,7 @@
 									<img src="icon/zhihu.jpg" class="img-responsive">
 								</div>
 								<div class="fh5co-text">
-									<p><a href="#">知乎</p>
+									<p><a href="https://www.zhihu.com/org/loliba-suo">知乎</a></p>
 								</div>
 							</div>
 						</div>
@@ -146,11 +145,11 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 								<div class="slider-text-inner">
-									<h2>将业余的爱好与创意付诸实践，独自创建并运营我的视频频道</h2>
-									<h2>全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
-									<h2>在2年左右的时间内，完成了92个视频项目的选题策划、脚本撰写、材料购置、手工实践、摄影拍摄、后期剪辑，以及超过300条的视频创意清单</h2>
-									<h2>拥有超过20项的商业合作策划案例，其中包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h2>
-									<h2>我的主要运营平台在Bilibili和知乎，但你也可以在以下平台观看：</h2>
+									<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独自创建并运营我的视频频道</h2>
+									<h2 class="fh5co-heading animate-box">全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
+									<h2 class="fh5co-heading animate-box">在2年左右的时间内，完成了92个视频项目的选题策划、脚本撰写、材料购置、手工实践、摄影拍摄、后期剪辑，以及超过300条的视频创意清单</h2>
+									<h2 class="fh5co-heading animate-box">拥有超过20项的商业合作策划案例，其中包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h2>
+									<h2 class="fh5co-heading animate-box">我的主要运营平台在Bilibili和知乎，但你也可以在以下平台找到我：</h2>
 								</div>
 							</div>
 						</div>
