--- a/up.html
+++ b/up.html
@@ -97,13 +97,7 @@
 							<div class="row">
 
 								<div class="col-md-8 col-sm-12">
-									<div class="home-text">
-										<h1>Your Website has a video background!</h1>
-										<p>Feel free to download and use HTML templates from Tooplate</p>
-										<ul class="section-btn">
-											<a href="#about" class="smoothScroll"><span data-hover="Discover More">Discover More</span></a>
-										</ul>
-									</div>
+									
 								</div>
 
 							</div>
@@ -111,9 +105,24 @@
 
 						<!-- Video -->
 						<video controls autoplay loop muted>
-							<source src="videos/blankme.mp4" type="video/mp4">
+							<source src="video/blankme.mp4" type="video/mp4">
 						</video>
 					</section>
+
+
+					<li style="background-image: url(videos/blankme.mp4);">
+						<div class="overlay"></div>
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+									<div class="slider-text-inner">
+										<h1>创意 <strong></strong> 最大的敌人就是自我怀疑——Sylvia Plath</h1>
+										<h2>热爱一切天马行空的想象，总是灵光乍现</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 
 
 
