--- a/up.html
+++ b/up.html
@@ -104,23 +104,16 @@
 						</div>
 
 						<!-- Video -->
-						<video controls autoplay loop muted>
-							<source src="video/blankme.mp4" type="video/mp4">
-						</video>
+
 					</section>
 
 
 					<li style="background-image: url(videos/blankme.mp4);">
 						<div class="overlay"></div>
 						<div class="container-fluid">
-							<div class="row">
-								<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-									<div class="slider-text-inner">
-										<h1>创意 <strong></strong> 最大的敌人就是自我怀疑——Sylvia Plath</h1>
-										<h2>热爱一切天马行空的想象，总是灵光乍现</h2>
-									</div>
-								</div>
-							</div>
+							<video controls autoplay loop muted>
+								<source src="video/blankme.mp4" type="video/mp4">
+							</video>
 						</div>
 					</li>
 
@@ -156,7 +149,8 @@
 								<div class="slider-text-inner">
 									<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独自创建并运营我的视频频道</h2>
 									<h2 class="fh5co-heading animate-box">全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
-									<h2 class="fh5co-heading animate-box">在2年左右的时间内，完成了92个视频项目的选题策划、脚本撰写、材料购置、手工实践、摄影拍摄、后期剪辑，以及超过300条的视频创意清单</h2>
+									<h2 class="fh5co-heading animate-box">在2年左右的时间内，完成了92个视频项目的选题策划、脚本撰写、材料购置、手工实践、摄影拍摄、后期剪辑</h2>
+									<h2 class="fh5co-heading animate-box">超过300条的视频创意清单</h2>
 									<h2 class="fh5co-heading animate-box">拥有超过20项的商业合作策划案例，其中包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h2>
 									<h2 class="fh5co-heading animate-box">我的主要运营平台在Bilibili和知乎，但你也可以在以下平台找到我：</h2>
 								</div>
