--- a/up.html
+++ b/up.html
@@ -100,7 +100,7 @@
 								</video>
 							</div>
 						</li>
-					</ul>
+					 </ul>
 
 
 
@@ -142,7 +142,7 @@
 									</div>
 								</div>
 
-								<div class="col-md-4">
+								<div class="col-md-3 col-sm-6 col-padding animate-box">
 									<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
 										<div class="fh5co-icon">
 											<img src="icon/weibo.jpg" class="img-responsive">
