--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h1>创意 <strong></strong> 最大的敌人就是自我怀疑——Sylvia Plath</h1>
+											<h1>创意， <strong></strong> 最大的敌人就是自我怀疑——Sylvia Plath</h1>
 											<h2>热爱一切天马行空的想象，总是灵光乍现</h2>
 										</div>
 									</div>
@@ -102,7 +102,7 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h1>理想，逆境，伙伴 <strong></strong> 自我情绪的调节能力，猫咪</h1>
+											<h1>理想，逆境，伙伴，猫 <strong></strong> 自我情绪的调节能力</h1>
 											<h2>驱动前行的力量，它们同等重要</h2>
 										</div>
 									</div>
