--- a/up.html
+++ b/up.html
@@ -112,16 +112,20 @@
 
 
 						<div class=" slider-text-inner">
-							<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独自创建并运营我的视频频道</h2>
+							<h2 class="fh5co-heading animate-box"><br /></h2>
+							<h2 class="fh5co-heading animate-box">作为UP主的我</h2>
+							<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独立创建并运营我的视频频道</h2>
 							<h2 class="fh5co-heading animate-box">全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
 							<h5 class="fh5co-heading animate-box">在2年时间内，完成了92个视频的选题策划、内容创作、脚本、材料、手工实践、拍摄、后期剪辑与流量分析</h5>
 							<h5 class="fh5co-heading animate-box">超过300条的视频创意清单</h5>
 							<h5 class="fh5co-heading animate-box">拥有超过20项商业合作策划案例，包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h5>
-							<h2 class="fh5co-heading animate-box">我的主要运营平台在
-							<a href="https://space.bilibili.com/421178217" target="_blank">Bilibili</a>
-							和
-							<a href="https://www.zhihu.com/org/loliba-suo" target="_blank">知乎</a>
-							，但你可以在以下所有平台找到我：</h2>
+							<h2 class="fh5co-heading animate-box">
+								我的主要运营平台在
+								<a href="https://space.bilibili.com/421178217" target="_blank">Bilibili</a>
+								和
+								<a href="https://www.zhihu.com/org/loliba-suo" target="_blank">知乎</a>
+								，但你可以在以下所有平台找到我：
+							</h2>
 						</div>
 					</div>
 
