--- a/photo.html
+++ b/photo.html
@@ -89,100 +89,133 @@
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">摄影作品</h2>
+				
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-1.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo1.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-2.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo2.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-3.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo3.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-4.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo4.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-5.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo5.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-6.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo6.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-1.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo7.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-2.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo8.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-1.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo9.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-2.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo10.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Brading</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-3.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo11.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="#" class="work image-popup" style="background-image: url(images/img-4.jpg);">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo12.jpg);">
 							<div class="desc">
-								<h3>Project Name</h3>
-								<span>Illustration</span>
+								<h3>Photo</h3>
+								<span>no detail</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo13.jpg);">
+							<div class="desc">
+								<h3>Photo</h3>
+								<span>no detail</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo14.jpg);">
+							<div class="desc">
+								<h3>Photo</h3>
+								<span>no detail</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo15.jpg);">
+							<div class="desc">
+								<h3>Photo</h3>
+								<span>no detail</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="#" class="work image-popup" style="background-image: url(images/photo16.jpg);">
+							<div class="desc">
+								<h3>Photo</h3>
+								<span>no detail</span>
 							</div>
 						</a>
 					</div>
@@ -192,13 +225,13 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">Get in touch</h1>
+						<h1 class="fh5co-heading-colored">摄影曾是我生活中唯一的热爱</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+						<p class="fh5co-lead">但我发现更多值得付诸精力的事物...</p>
+						<p><a href="#" class="btn btn-primary"> More Photo</a></p>
 					</div>
 					
 				</div>
